<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.GelismisUygulamaAyarlari">

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foregroundGravity="center"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/re" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/gel_m_uygulama_ayarlari"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView27" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView27"
        app:layout_constraintStart_toStartOf="@+id/imageView27"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:srcCompat="@drawable/line" />

    <Switch
        android:id="@+id/bluetooth"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:checked="false"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/cihazi_etkinlestir"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:thumb="@drawable/ellipse1"
        android:track="@drawable/kompresorswitch"
        app:layout_constraintEnd_toStartOf="@+id/imageView28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Switch
        android:id="@+id/kirlisugostergesiswitch"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/kirlisugostergesi"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:thumb="@drawable/ellipse1"
        android:track="@drawable/kompresorswitch"
        app:layout_constraintEnd_toStartOf="@+id/imageView28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth" />

    <Switch
        android:id="@+id/dengesistemiswitch"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/denge_sistemi"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:thumb="@drawable/ellipse1"
        android:track="@drawable/kompresorswitch"
        app:layout_constraintEnd_toStartOf="@+id/imageView28"
        app:layout_constraintStart_toStartOf="@+id/imageView27"
        app:layout_constraintTop_toBottomOf="@+id/kirlisugostergesiswitch" />

    <Button
        android:id="@+id/button"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ayargirisbtn"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/kaydett"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView28"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/imageView28"
        app:layout_constraintTop_toBottomOf="@+id/imageView28" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="448dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/huntercunter" />

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/imageView28"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center|start"
            android:text="@string/bluetootheslestirme"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/imageView28"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center|start"
            android:text="@string/diagnostikmenuu"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout21"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/imageView28"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout20">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center|start"
            android:text="@string/kontrol_akimi_karti"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/diagnostikbtn"
        android:layout_width="37dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eslesmebtn"
        app:srcCompat="@drawable/bluetooth" />

    <TextView
        android:id="@+id/eslesmetext"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center|start"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout20"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout19"
        app:layout_constraintStart_toStartOf="@+id/linearLayout19"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19" />

    <ImageView
        android:id="@+id/eslesmebtn"
        android:layout_width="37dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:srcCompat="@drawable/bluetooth" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="37dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="90dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="2A"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diagnostikbtn" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dengesistemiswitch"
        app:navigationIcon="@drawable/back"
        app:title="@string/kullanici_ayar" />


</androidx.constraintlayout.widget.ConstraintLayout>