<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AydinlatmaFragment">


    <LinearLayout
        android:id="@+id/yatakodasıışık"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/oturmaalaniisik"
        app:layout_constraintStart_toStartOf="@+id/oturmaalaniisik"
        app:layout_constraintTop_toBottomOf="@+id/oturmaalaniisik">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/yatak_odasi_isiklari_2"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/yatakodasiisik2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track">

        </Switch>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/oturmaalaniisik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/mutfaktavan">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/oturma_alani_isiklarilari"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/oturmaalanisiklari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track">

        </Switch>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mutfaktavan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/oturmaalaniisik"
        app:layout_constraintStart_toStartOf="@+id/oturmaalaniisik"
        app:layout_constraintTop_toBottomOf="@+id/disaydinlatma">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/mutfak_tavan_isiklari"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/mutfaktavanisik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track">

        </Switch>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/yatakodasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/oturmaalani"
        app:layout_constraintStart_toStartOf="@+id/oturmaalani"
        app:layout_constraintTop_toBottomOf="@+id/oturmaalani">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/yatak_odasi_isiklari_1"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/yatakodaisik1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track">

        </Switch>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/oturmaalani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/oturmaalaniisik"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mutfakisik">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/oturma_alani_isiklari_m"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/oturmaalanisikM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track">

        </Switch>

    </LinearLayout>


    <TextView
        android:id="@+id/icaydinlatma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/dis_aydinlatmalar"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/disaydinlatma"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/ic_aydinlatmalar"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/oturmaalaniisik"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="@+id/oturmaalani"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mutfakisik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/oturmaalani"
        app:layout_constraintStart_toStartOf="@+id/oturmaalani"
        app:layout_constraintTop_toBottomOf="@+id/disaydinlatma">

        <TextView
            android:id="@+id/mutfakisiklaritext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/mutfak_isiklari"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/mutfakisiklari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track">

        </Switch>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:layout_marginTop="112dp"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/icaydinlatma">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/dis_isiklar_sol"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/disisiklarisol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:thumb="@drawable/thumb1"
            android:track="@drawable/track1">

        </Switch>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/dis_isiklari_on"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/disisiklaron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:thumb="@drawable/thumb1"
            android:track="@drawable/track1">

        </Switch>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/park_isiklari_sol"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/parkisiklarisol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:thumb="@drawable/thumb1"
            android:track="@drawable/track1">

        </Switch>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/icaydinlatma">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/dis_isiklar_sag"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/disisiklarsag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:thumb="@drawable/thumb1"
            android:track="@drawable/track1">

        </Switch>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/dis_isiklar_arka"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/disisiklararka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:thumb="@drawable/thumb1"
            android:track="@drawable/track1">

        </Switch>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/park_isiklari_sag"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/parkisiklarisag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:thumb="@drawable/thumb1"
            android:track="@drawable/track1">

        </Switch>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="448dp"
        android:layout_height="100dp"
        android:src="@drawable/huntercunter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>