<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.AyarlarFragment">


    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/re" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ayariconn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kullanici"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ayarlarbutton"
        android:ems="10"
        android:hint="@string/kullanici_adi"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/sifre"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/ayarlarbutton"
        android:ems="10"
        android:hint="@string/sifre"
        android:inputType="text|textPassword"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/kullanici"
        app:layout_constraintStart_toStartOf="@+id/kullanici"
        app:layout_constraintTop_toBottomOf="@+id/kullanici" />

    <Button
        android:id="@+id/kaydet"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ayargirisbtn"
        android:text="@string/giris_yap"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sifre"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/sifre"
        app:layout_constraintTop_toBottomOf="@+id/sifre" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="448dp"
        android:layout_height="100dp"
        android:src="@drawable/huntercunter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>